--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (submit)="postData()">
   <label for="fileUpload">Upload a file: </label>
-  <input type="file" name="fileUpload" id="" #fileUpload>
+  <input type="file" name="fileUpload" id="fileUpload" #fileUpload>
   <label for="description">Description: </label>
-  <input type="text" name="description" formControlName="description">
+  <input type="text" name="description" id = "description" formControlName="description">
   <button type="button">Submit</button>
 </form>
